@@ -1,3 +1,8 @@
+2013-01-11  Helmut Eller  <heller@common-lisp.net>
+
+	* swank.lisp (swank-compile-file*): Renamed from
+	compile-file-with-compile-file.
+
 2013-01-10  Helmut Eller  <heller@common-lisp.net>
 
 	* swank-ecl.lisp (frame-var-value): Return the value without name.
